[project]
name = "genworlds"
version = "0.0.18"
description = "GenWorlds by YeagerAI: Pioneering AI-based simulations based on collaborative autonomous agents."
readme = "README.md"
authors = []
requires-python = ">=3.10,<3.12"

dependencies = [
    "click>=8.1.3",
    "colorama>=0.4.6",
    "colorlog>=6.7.0",
    "fastapi>=0.88.0",
    "fastjsonschema>=2.16.3",
    "jsonschema>=4.17.3",
    "langchain-community>=0.3.13",
    "langchain>=0.0.335",
    "openai>=0.28.0",
    "prompt-toolkit>=3.0.38",
    "pydantic>=1.10.7",
    "python-dotenv>=1.0.0",
    "qdrant-client>=1.2.0",
    "threadpoolctl>=3.1.0",
    "tiktoken>=0.4.0",
    "uvicorn>=0.21.1",
    "websocket-client>=1.5.1",
    "websockets>=11.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/genworlds"]

[tool.uv]
dev-dependencies = [
    "debugpy==1.6.2",
    "black==23.3.0",
    "jupyter>=1.1.1",
    "pytest==7.4.0",
]
